fix: wrap submit buttons in divs for better styling and update .submit class width in styles.css

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ br {
 .submit {
     border: 0px;
     border-width: 0px;
-    width: 25%;
+    width: 50%;
     height: 50%;
     background-color: rgba(203, 215, 246, 0.26);
     padding: 0%;
